--- a/static/template/vue.index.template
+++ b/static/template/vue.index.template
@@ -45,7 +45,7 @@
         <el-row :gutter="10" class="mb8">
           <el-col :span="1.5">
             <el-button
-              v-permisaction="['{{.PackageName}}:{{.BusinessName}}:{{.ModuleName}}:add']"
+              v-permisaction="['{{.PackageName}}:{{.ModuleName}}:add']"
               type="primary"
               icon="el-icon-plus"
               size="mini"
@@ -56,7 +56,7 @@
           </el-col>
           <el-col :span="1.5">
             <el-button
-              v-permisaction="['{{.PackageName}}:{{.BusinessName}}:{{.ModuleName}}:export']"
+              v-permisaction="['{{.PackageName}}:{{.ModuleName}}:export']"
               type="success"
               icon="el-icon-download"
               size="mini"
@@ -98,7 +98,7 @@
           <el-table-column width="160" fixed="right" label="操作" align="center" class-name="small-padding fixed-width">
             <template slot-scope="scope">
               <el-button
-                v-permisaction="['{{.PackageName}}:{{.BusinessName}}:{{.ModuleName}}:edit']"
+                v-permisaction="['{{.PackageName}}:{{.ModuleName}}:edit']"
                 size="mini"
                 type="text"
                 icon="el-icon-edit"
@@ -107,7 +107,7 @@
                 修改
               </el-button>
               <el-button
-                v-permisaction="['{{.PackageName}}:{{.BusinessName}}:{{.ModuleName}}:del']"
+                v-permisaction="['{{.PackageName}}:{{.ModuleName}}:del']"
                 size="mini"
                 type="text"
                 icon="el-icon-delete"
