--- a/static/template/apis.go.template
+++ b/static/template/apis.go.template
@@ -159,7 +159,7 @@ func (e {{.ClassName}}) Export(c *gin.Context) {
 	}
 
 	sysConfService := adminService.NewSysConfigService(&s.Service)
-	maxSize, respCode, err := sysConfService.GetWithKeyInt("sys_max_export_size")
+	maxSize, respCode, err := sysConfService.GetWithKeyInt("admin_sys_max_export_size")
 	if err != nil {
 		e.Error(respCode, err.Error())
 	}
