--- a/web/.env.production
+++ b/web/.env.production
@@ -2,4 +2,4 @@
 NODE_ENV = "production"
 
 # 线上环境接口地址
-VITE_API_URL = "https://mock.mengxuegu.com/mock/62abda3212c1416424630a45"
+VITE_API_URL = "http://120.48.157.250:60000"
