--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
 	},
 	"dependencies": {
 		"@ant-design/pro-components": "^2.8.2",
+		"@wangeditor/editor": "^5.1.23",
 		"@wangeditor/editor-for-react": "^1.0.6",
 		"antd": "^5.22.3",
 		"antd-img-crop": "^4.23.0",
