确保数据变更导致的刷新依旧能在当前页

--- a/static/template/react.view.tsx.template
+++ b/static/template/react.view.tsx.template
@@ -143,7 +143,7 @@ const {{.ClassName}}: React.FC = () => {
   };
 
   const handleFormModalConfirm = () => {
-    actionRef.current?.reload(true);
+    actionRef.current?.reload(false);
   };
 
   const handleExport = (done: () => void) => {
@@ -187,7 +187,7 @@ const {{.ClassName}}: React.FC = () => {
             message.error(msg);
             return;
           }
-          actionRef.current?.reload(true);
+          actionRef.current?.reload(false);
           message.success(msg);
         } finally {
           done();
