模板调整，避面布局异常

--- a/static/template/react.view.tsx.template
+++ b/static/template/react.view.tsx.template
@@ -66,6 +66,9 @@ const {{.ClassName}}: React.FC = () => {
       {{- if ne .DictType "" }}
       valueType: "select",
       valueEnum: {{.JsonField}}Options,
+      fieldProps: {
+        getPopupContainer: (triggerNode: { parentElement: any }) => triggerNode.parentElement || document.body
+      },
       {{- end }}
       {{- if eq .HtmlType "datetime"  }}
       width: 180,
@@ -83,7 +86,10 @@ const {{.ClassName}}: React.FC = () => {
       dataIndex: "{{.JsonField}}",
       valueType: "dateTimeRange",
       hideInTable: true,
-      search: { transform: value => ({ begin{{.GoField}}: value[0], end{{.GoField}}: value[1] }) }
+      search: { transform: value => ({ begin{{.GoField}}: value[0], end{{.GoField}}: value[1] }) },
+      fieldProps: {
+        getPopupContainer: (triggerNode: { parentElement: any }) => triggerNode.parentElement || document.body // 确保弹出框在合适的容器中
+      }
     },
     {{- end }}
     {{- end }}
