--- a/static/template/react.formmodal.tsx.template
+++ b/static/template/react.formmodal.tsx.template
@@ -137,7 +137,7 @@ const FormModal = forwardRef<FormModalRef, ModalProps>(({ onConfirm }, ref) => {
         reset();
         setIsModalOpen(false);
       }}
-      destroyOnClose
+      destroyOnHidden
       footer={[
         <LoadingButton
           key="cancel"
